# clustered-example

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build-win.sh  build.sh
assets/: quad.frag  quad.vert  shader.frag  shader.vert
assets/models/: castle.glb  light_demo.glb  untitled.blend  untitled.blend1  untitled.glb
assets/models/default/: monkey.glb
assets/shaders/: clusterCullLightShader.comp  clusterShader.comp  constant.frag  constant.vert  constant_instanced.vert  gBuffer_geo_pass.frag  gBuffer_geo_pass.vert  gBuffer_light_pass.frag  hdr.frag  ssao.frag  ssao_blur.frag
assets/shaders/base/: simple_screenspace.vert
src/: arg_parser.h  camera.h  main.cpp  render_manager.cpp  render_manager.h
src/core/: core.cpp  core.h  gl.cpp  shader.cpp  shader.h  util.h
src/debug/: debug_manager.cpp  debug_manager.h
